# pb-chatroom

./: .gitignore  .mcp.json  CHANGELOG.md  NOTICE  README.md  docker-compose.yml
.claude/: CLAUDE.md  pipeline.md  testing.md
.claude-plugin/: marketplace.json  plugin.json
commands/: chat-ack.md  chat-read.md  chat-send.md  chat-threads-open.md  chat-threads.md  chat-while-away.md
docs/: agent-to-agent.md  claudeclaw-integration.md  external-executors.md
docs/plan-history/: README.md  v0_3_0.md  v0_4_0-revised.md
examples/: claudeclaw-host-auto.json  claudeclaw-system-prompt.md
hooks/: check_messages.sh  hooks.json
mcp/: Dockerfile  pyproject.toml
mcp/src/pb_chatroom_mcp/: identity.py  server.py
mcp/src/pb_chatroom_mcp/tools/: chat_ack.py  chat_ask_peer.py  chat_claim.py  chat_read_thread.py  chat_send.py  list_threads.py
mcp/tests/: conftest.py  test_chat_ack.py  test_chat_ask_peer.py  test_chat_claim.py  test_chat_list_threads.py  test_chat_read_thread.py  test_chat_send.py  test_chat_send_v0_4.py  test_dockerfile_structure.py  test_scaffold.py
relay/: Dockerfile  HCF_PLAN_BRIEF.md  HCF_PLAN_BRIEF.v0.4.0-original.md  README.md  pyproject.toml
relay/examples/: responders.example.json
relay/src/pb_chatroom_relay/: __init__.py  archiver.py  broadcaster.py  budget.py  claim_announcer.py  claim_orchestrator.py  cli.py  client.py  config.py  daemon.py  dispatcher.py  escalation.py  gh_polling.py  health.py  identity.py  identity_validation.py  idle.py  peer_response.py  polling.py  responder.py  state.py
relay/tests/: conftest.py  test_archiver.py  test_archiver_postmortem.py  test_broadcaster.py  test_budget.py  test_claim_announcer.py  test_claim_orchestrator.py  test_cli.py  test_client.py  test_compose.py  test_config.py  test_daemon.py  test_dispatcher.py  test_dockerfile.py  test_docs_agent_to_agent.py  test_e2e_compose.py  test_e2e_ticket_pickup.py  test_escalation.py  test_gh_polling.py  test_health.py  test_identity.py  test_identity_validation.py  test_idle.py  test_peer_response.py  test_polling.py  test_relay_readme.py  test_relay_readme_v0_4.py  test_responder.py  test_state.py  test_top_readme.py  test_top_readme_v0_4.py
server/: Dockerfile  pyproject.toml
server/src/pb_chatroom/: __init__.py  app.py  schemas.py  settings.py  web.py
server/src/pb_chatroom/api/: __init__.py  threads.py
server/src/pb_chatroom/store/: __init__.py  errors.py  messages.py  recipients.py  schema.py  threads.py
server/src/pb_chatroom/templates/: base.html  thread_detail.html  threads_list.html
server/tests/: conftest.py  test_api_messages.py  test_app.py  test_changelog.py  test_commands_structure.py  test_compose_2service_smoke.py  test_compose_no_relay.py  test_compose_structure.py  test_dashboard_legacy_warning.py  test_dashboard_panel.py  test_dockerfile_structure.py  test_docs_agent_to_agent_reframe.py  test_docs_claudeclaw_integration.py  test_docs_external_executors.py  test_examples_claudeclaw_config.py  test_examples_claudeclaw_prompt.py  test_identity.py  test_no_relay_daemon_references.py  test_plan_history_archive.py  test_plugin_version_bump.py  test_readme_phase1.py  test_readme_v0_4_reshape.py  test_relay_deleted.py  test_schemas.py  test_store_messages.py  test_store_schema.py  test_store_threads.py  test_store_v0_4.py  test_store_v0_4_migration.py  test_threads.py  test_threads_claim_v0_4.py  test_threads_multi_v0_4.py  test_threads_post_v0_4.py  test_threads_while_away.py  test_v0_4_verification_gate.py  test_web.py
