[project]
name = "pb-chatroom-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["mcp>=1.0,<2.0", "httpx>=0.27.0", "pydantic>=2.9.0", "pydantic-settings>=2.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "ruff>=0.7.0", "pyright>=1.1.380"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pb_chatroom_mcp"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "basic"
