[project]
name = "pb-chatroom-relay"
version = "0.0.1"
description = "Headless relay daemon for pb-chatroom — polls chatroom threads addressed to *-auto participants, spawns Claude Code via --print, posts responses back as replies. Closes the no-human-in-the-loop autonomy gap."
license = { text = "Apache-2.0" }
authors = [
    { name = "Lucas van Staden", email = "lucas@proxiblue.com.au" },
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "pyright>=1.1.380",
    "pyyaml>=6.0",
]

[project.scripts]
pb-chatroom-relay = "pb_chatroom_relay.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pb_chatroom_relay"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end docker-compose tests (requires --run-e2e flag)",
]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "basic"
